project/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-project-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-project
  template:
    metadata:
      labels:
        app: kube-project
    spec:
      volumes:
        - name: files
          persistentVolumeClaim:
            claimName: kube-project-claim
      containers:
        - name: kube-project
          image: keskimaki/kube-project-front:0.5
        - name: kube-project-api
          image: keskimaki/kube-project-api:0.4
          volumeMounts:
            - mountPath: /usr/src/app/files
              name: files
