project/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: kube-project-svc
spec:
  type: ClusterIP
  selector:
    app: kube-project
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
